--- a/src/App.css
+++ b/src/App.css
@@ -48,3 +48,8 @@
         font-weight: 300;
         color: #7e7e7e;
         margin-bottom: 0; }
+
+.page-title {
+  font-size: 30px;
+  font-weight: 700;
+  margin-bottom: 20px; }
